Fixed header alignment

--- a/css/style.css
+++ b/css/style.css
@@ -40,10 +40,7 @@ header {
     background-color: #5C6BC0;
     color: white;
     display: flex;
-}
-
-header .links {
-    align-self: center;
+    align-items: center;
 }
 
 header .links a, header .links a:hover, header .links a:active, header .links a:visited {
